--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
             background-color: black;
         }
         img {
-            max-width: 100%;
-            max-height: 100%;
+            width: 80%;      /* Makes the image smaller */
+            max-width: 400px; /* Limits the size on large screens */
+            height: auto;     /* Maintains aspect ratio */
         }
     </style>
 </head>
